--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
 <resources>
     <string name="app_name">PPT_Kotders</string>
+    <string name="bt_back">Back</string>
+    <string name="bt_end_game">Leave</string>
+    <string name="tx_player">Player</string>
+    <string name="tx_machine">Bot</string>
+    <string name="bt_play">Play</string>
+    <string name="tx_my_games">My Games</string>
+    <string name="tx_victory">Victory</string>
+    <string name ="tx_help">Help</string>
+    <string name ="tx_loose">Defeat</string>
+    <string name="tx_round">Round</string>
+    <string name="tx_choose">Choose your option</string>
+    <string name="bt_continue">Continue</string>
+    <string name="user_txt">User</string>
+    <string name="not_valid">Insert your name</string>
+    <string name="tx_pair">PAIR</string>
 </resources>
