--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -16,4 +16,5 @@
     <string name="user_txt">Usuario</string>
     <string name="not_valid">Inserta tu nombre</string>
     <string name="tx_pair">EMPATE</string>
+    <string name="lengua">Cambiar de idioma</string>
 </resources>
