--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="user_txt">User</string>
     <string name="not_valid">Insert your name</string>
     <string name="tx_pair">PAIR</string>
+    <string name="lengua">Change language</string>
 </resources>
