--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="user_txt">User</string>
     <string name="not_valid">Insert your name</string>
     <string name="tx_pair">PAIR</string>
+    <string name="default_web_client_id">527837638823-l4sguih5pbf2mrqfmqn0nuu7hcve0ptf.apps.googleusercontent.com</string>
 </resources>
