--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="not_valid">Insert your name</string>
     <string name="tx_pair">PAIR</string>
     <string name="your_web_client_id">527837638823-d1tf46mg7ff866m62ars31ikrhblhf6a.apps.googleusercontent.com</string>
+    <string name="default_web_client_id">527837638823-2bs9gujkrdavmkbohims3qcmgj72aill.apps.googleusercontent.com</string>
 </resources>
